--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+	<p><a href="about.html">About Me</a></p>
   <header>
     <h1>Hello — My Site on GitHub Pages</h1>
     <p>Created by <strong>Your Name</strong></p>
